refactor: simplify code and remove unused imports in controllers and repository