@@ -10,8 +10,6 @@ import jakarta.validation.Valid;
 import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.Min;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.Link;
 import org.springframework.http.ResponseEntity;
@@ -19,7 +17,6 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
@@ -29,16 +26,12 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 @RequiredArgsConstructor
 @Validated
 public class MovieController {
-    private final Logger log = LoggerFactory.getLogger(MovieController.class);
     private final MovieService movieService;
     private final MovieRestMapper movieMapper;
 
     @GetMapping("/popular")
     public ResponseEntity<MovieListDTO> getPopularMovies(
             @RequestParam(defaultValue = "1") @Min(1) @Max(1000) int page) {
-
-        log.info("REST request to get popular movies for page {}", page);
-
         List<Movie> movies = movieService.getPopularMovies(page);
         List<MovieDTO> responses = movies.stream()
                 .map(movieMapper::toResponse)
@@ -53,13 +46,10 @@ public class MovieController {
     public ResponseEntity<MovieListDTO> searchMovies(
             @RequestParam String query,
             @RequestParam(defaultValue = "1") @Min(1) @Max(1000) int page) {
-
-        log.info("REST request to search movies with query '{}' on page {}", query, page);
-
         List<Movie> movies = movieService.searchMovies(query, page);
         List<MovieDTO> responses = movies.stream()
                 .map(movieMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         responses.forEach(this::addMovieLinks);
 
@@ -68,8 +58,6 @@ public class MovieController {
 
     @GetMapping("/{id}")
     public ResponseEntity<EntityModel<MovieDTO>> getMovieDetails(@PathVariable Long id) {
-        log.info("REST request to get details for movie with ID {}", id);
-
         return movieService.getMovieDetails(id)
                 .map(movie -> {
                     MovieDTO response = movieMapper.toResponse(movie);
@@ -84,8 +72,6 @@ public class MovieController {
 
     @PostMapping("/favorites")
     public ResponseEntity<EntityModel<MovieDTO>> addFavorite(@RequestBody @Valid CreateFavoriteRequestDTO request) {
-        log.info("REST request to add movie with ID {} to favorites", request.movieId());
-
         Movie movie = movieService.addToFavorites(request.movieId());
         MovieDTO response = movieMapper.toResponse(movie);
         addMovieLinks(response);
@@ -99,16 +85,12 @@ public class MovieController {
 
     @DeleteMapping("/favorites/{id}")
     public ResponseEntity<Void> removeFavorite(@PathVariable Long id) {
-        log.info("REST request to remove movie with ID {} from favorites", id);
-
         movieService.removeFromFavorites(id);
         return ResponseEntity.noContent().build();
     }
 
     @GetMapping("/favorites")
     public ResponseEntity<MovieListDTO> getFavorites() {
-        log.info("REST request to get all favorite movies");
-
         List<Movie> movies = movieService.getFavorites();
         List<MovieDTO> responses = movies.stream()
                 .map(movieMapper::toResponse)
